# Leetcode-Recommendation-System

./: .env.example  .gitignore  Makefile  README.md  build_problem_graph.py  build_tag_graph.py  combine_data.py  eda.py  eda_output.txt  neetcode150.json  pyproject.toml  recommendations.json  score_trend.py  score_trend_output.txt  scrapeProblemData.py  scratch.py
.github/workflows/: ci.yml
data/: README.md  leetcode_problems_graph.gml
docs/: README.md  lightgbm_results.md
docs/adr/: 0001-use-madr-format.md  0002-contest-scraping-approach.md  README.md  template.md
docs/architecture/: README.md  data-pipeline.md  recommendation-tiers.md  system-overview.md
docs/planning/: README.md  experiments-log.md  roadmap.md
models/: README.md
notebooks/: README.md
plans/: hybrid-ensemble-recommendation-system.md
scripts/: build_dataset.py  evaluate.py  evaluate_als.py  generate_recommendations.py  preprocess_data.py  run.sh  scrape_all_contests.py  scrape_contest.py  scrape_contests.py  train_advanced.py  train_als.py  train_baseline.py  train_lightgbm.py
scripts/data_collection/: README.md  client.py  run.py  writers.py
scripts/data_collection/scrapers/: contests.py
src/lrs/: __init__.py  config.py
src/lrs/data/: _rate_limiter.py  loader.py  (+5 more)
tests/: README.md  conftest.py
tests/unit/: test_als_recommender.py  test_contest_parser.py  test_metrics.py  test_neetcode150.py  test_problem_catalog.py  test_rate_limiter.py  test_score_utils.py  test_scraper.py  test_tier_assigner.py
web/: app.py  run.sh
web/static/: style.css
web/templates/: index.html
(+29 files in other folders)
