[project]
name = "lrs"
version = "0.1.0"
description = "Personalized LeetCode skill-gap analyzer and recommendation system"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "implicit>=0.7",        # ALS / BPR collaborative filtering
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "pyarrow>=14.0",        # Parquet I/O
    "requests>=2.31",       # LeetCode API scraping
    "curl-cffi>=0.7",       # Chrome TLS impersonation to bypass Cloudflare
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.6",
    "nbstripout>=0.6",      # Strip notebook outputs before commit
    "pandas-stubs>=2.0",
]
advanced = [
    # Heavy GPU/DL deps — install only when needed
    "torch>=2.1",
    "torch-geometric>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lrs"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
packages = ["lrs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
